chore(users): fix overflow roles with tuiFade

--- a/src/app/components/dashboard/users/users.component.scss
+++ b/src/app/components/dashboard/users/users.component.scss
@@ -65,7 +65,7 @@
       overflow-x: auto;
       width: 100%;
 
-      $overflow-row-width: 35rem;
+      $overflow-row-width: 49rem;
 
       tbody {
         width: $overflow-row-width;
